=== 0.2.3 - 13.09.2012 ===
* renamed the program to keeper to not confuse people with the original etckeeper


=== 0.2.2.2 - 28.06.2012 ===
* corrected: some comments and journal entries grammar and spelling
* fixed: check did not keep track of changed permissions
* fixed: when the script was terminated unclean (Strg-c) remove the old comparsion directory
* fixed: journal does not keep track of changes when using add function
* improved: do selfcheck before executing any further action on script
* improved: when excluding files with the exclude command the $EXCLUDE file also gets under version control

=== 0.2.2.1 - 03.03.2012 ===
* no help for journal when using help fixed

=== 0.2.2 - 21.02.2012 ===
IMPORTANT:
you must use the "init" function if you have been using etckeeper-ng 
otherwise you will get problems since the layout of the content.lst file
has changed and will not get parsed probably any longer.

* whenever the check_perms module gets called and checks in changed permission we committing these now 
* $JOURNAL keeps track of what a user has done when using "backup" or "add" command
* new command "list-excludes" to list the exclude patterns in your exclude file
* new command "journal"  shows a detailed log for etckeeper-ng
* using the "init" command is no longer interactive: the first commit is always named: inital commit
* all commands showing comments about what action takes place at runtime 
* the "add" option now only takes one argument now this was part of a major bug fix
* in keeper.conf you can disable looking for changed permissions if you don't want this
* in keeper.conf you can configure what will be changed
* when reinitialize with "init command" the script no longer deletes your excludes
	( maybe we add an option to remove exclude files in future releases )
* removed the check_perms_S module which was quiet redundant to the check_perms module
* fixed bugs: 
		- broken exclude command